add kafka eagle kms